objects/ssot__PaymentRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityId__c</fullName>
        <label>Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityObject__c</fullName>
        <label>Facility Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Payment Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyId__c</fullName>
        <label>Insurance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestReceivedMethod__c</fullName>
        <label>Payment Request Received Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestStatus__c</fullName>
        <label>Payment Request Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestSubmissionType__c</fullName>
        <label>Payment Request Submission Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequest_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequest_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>PaymentRequest_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>PaymentRequest_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedDate__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceNumberText__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RemittanceRecipientId__c</fullName>
        <label>Remittance Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RemittanceRecipientObject__c</fullName>
        <label>Remittance Recipient Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderId__c</fullName>
        <label>Service Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderObject__c</fullName>
        <label>Service Provider Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceRecipientId__c</fullName>
        <label>Service Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceRecipientObject__c</fullName>
        <label>Service Recipient Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittingAccountId__c</fullName>
        <label>Submitting Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRequestedAmount__c</fullName>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalServiceAmount__c</fullName>
        <label>Total Service Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658746447_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequest_SubmittingAccountId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PaymentRequest_SubmittingAccountId_m_rel</relationshipLabel>
        <relationshipName>rel_1731658746447_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658750825_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequest_RemittanceRecipientId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PaymentRequest_RemittanceRecipientId_rel</relationshipLabel>
        <relationshipName>rel_1731658750825_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658755953_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequest_FacilityId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PaymentRequest_FacilityId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1731658755953_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>